fix my grade, assignemtn for student
