# src/apis/user.api.js
@@ -26,6 +26,9 @@ userApi.get('/student/my-courses', passportAuth.jwtAuthentication, userControlle
 // api: xem chi tiết 1 lớp (thông tin lớp, giảng viên, danh sách học sinh + phân bổ điểm)
 userApi.get('/student/course/:code', passportAuth.jwtAuthentication, userController.getDetailCourse)
 
+// api: xem danh sách bài tập
+userApi.get('/student/course/assignments', passportAuth.jwtAuthentication, userController.getAssignments)
+
 // api: xem điểm (phân bổ điểm + danh sách bài tập trong từng phân bổ điểm + bảng điểm)
 userApi.get('/student/grade', passportAuth.jwtAuthentication, userController.getMyGrade)
 
